--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,29 @@
-_UI Unreal ...
+_Animation + 3C + inputEnhanced
 
-_Animation
+_UI unreal + unity
+
+_raycast / projection / overlap
+
+_coroutine
+
+_level
+
+Escape game: 
+	camera orbit avec spring arm 
+	chara anim (classic) + jump & crouch
+	chara move
+	chara interaction
+	UI
+	change level + temps chargement
+
+
+
+
+
 
 _Reflexion C#
 
-_Utils GUI
-
-_Lookat + Anim
+_Lookat
 
 
 
